--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+body{
+  background-color: #F7F7F7;
 }
- 
